--- a/index.html
+++ b/index.html
@@ -788,11 +788,10 @@ TODO:
       style="background:#1976d2;color:#fff;padding:8px;cursor:move;font-weight:bold;border-radius:6px 6px 0 0;display:flex;align-items:center;justify-content:space-between;">
       Styler Panel
       <span id="styler-menu-btn" style="margin-left:auto;cursor:pointer;font-size:22px;padding:0 8px;">&#9776;</span>
-      <div id="styler-menu-dropdown"
-        style="color:black;display:none;position:absolute;top:38px;right:0;width:140px;background:#fff;border-radius:0 0 6px 6px;box-shadow:0 2px 8px #0002;z-index:10000;">
-        <div style="padding:10px;border-bottom:1px solid #eee;cursor:pointer;text-align:right;">Placeholder 1</div>
-        <div style="padding:10px;border-bottom:1px solid #eee;cursor:pointer;text-align:right;">Placeholder 2</div>
-        <div id="styler-close-btn" style="padding:10px;color:#f44336;cursor:pointer;text-align:right;">Close</div>
+      <div id="styler-menu-dropdown" style="display:none;position:absolute;top:38px;left:0;width:240px;background:#fff;border-radius:0 0 6px 6px;box-shadow:0 2px 8px #0002;z-index:10000;">
+        <div style="padding:10px;border-bottom:1px solid #eee;cursor:pointer;">Placeholder 1</div>
+        <div style="padding:10px;border-bottom:1px solid #eee;cursor:pointer;">Placeholder 2</div>
+        <div id="styler-close-btn" style="padding:10px;color:#f44336;cursor:pointer;">Close</div>
       </div>
     </div>
     <div style="background:#fff;color:black;font-size:16px;border-radius:0 0 6px 6px;">
@@ -807,7 +806,42 @@ TODO:
 
     </div>
   </div>
-<!-- end -->
+
+
+<script>
+// Drag functionality for styler panel
+(function () {
+  const panel = document.getElementById('styler-panel');
+  const dragBar = document.getElementById('styler-drag');
+  let offsetX = 0, offsetY = 0, isDown = false;
+
+  dragBar.addEventListener('mousedown', function(e) {
+    isDown = true;
+    // Calculate offset between mouse and panel top-left
+    const rect = panel.getBoundingClientRect();
+    offsetX = e.clientX - rect.left;
+    offsetY = e.clientY - rect.top;
+    document.body.style.userSelect = 'none';
+  });
+
+  document.addEventListener('mousemove', function(e) {
+    if (!isDown) return;
+    panel.style.left = (e.clientX - offsetX) + 'px';
+    panel.style.top = (e.clientY - offsetY) + 'px';
+  });
+
+  document.addEventListener('mouseup', function() {
+    isDown = false;
+    document.body.style.userSelect = '';
+  });
+})();
+</script>
+
+
+
+
+
+
 
 
   <script>
@@ -836,7 +870,6 @@ TODO:
       });
     })();
   </script>
-
   <script>
     (function () {
       const r = document.getElementById('r-slider');
@@ -875,7 +908,7 @@ TODO:
       });
     })();
   </script>
-
+ 
 
 </body>
 
