--- a/styler.html
+++ b/styler.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Profile</title>
 
- 
+
 
 
 
@@ -19,60 +19,56 @@
 </head>
 
 <body>
- 
+
     <div id="styler-panel" class="w3-card w3-round w3-margin" style="color:var(--text-color)">
-         <div>
-        <label>R: <input type="range" min="0" max="255" value="255" id="r-slider"></label><br>
-        <label>G: <input type="range" min="0" max="255" value="255" id="g-slider"></label><br>
-        <label>B: <input type="range" min="0" max="255" value="255" id="b-slider"></label><br>
-        <div id="color-preview"
-          style="margin-top:10px;width:100%;height:30px;border-radius:4px;background:blue;"> </div>
-      </div>
+        <div>
+            <label>R: <input type="range" min="0" max="255" value="255" id="r-slider"></label><br>
+            <label>G: <input type="range" min="0" max="255" value="255" id="g-slider"></label><br>
+            <label>B: <input type="range" min="0" max="255" value="255" id="b-slider"></label><br>
+            <div id="color-preview" style="margin-top:10px;width:100%;height:30px;border-radius:4px;background:blue;">
+            </div>
+
+            <button id="persist-style" style="margin-top:10px;width:100%;">Persist</button>
+
+
+        </div>
     </div>
 
-  <script>
-    (function () {
-      const r = document.getElementById('r-slider');
-      const g = document.getElementById('g-slider');
-      const b = document.getElementById('b-slider');
-      const preview = document.getElementById('color-preview');
-      const iframe = document.querySelector('iframe[title="Profile"]');
-      const persistBtn = document.getElementById('persist-style');
+    <script>
+        (function () {
+            const r = document.getElementById('r-slider');
+            const g = document.getElementById('g-slider');
+            const b = document.getElementById('b-slider');
+            const preview = document.getElementById('color-preview');
+            //   const iframe = document.querySelector('iframe[title="Profile"]');
+            const iframe = parent.document.querySelector('iframe[title="Profile"]');
+            const persistBtn = document.getElementById('persist-style');
 
-      function updateColor() {
-        const rgb = `rgb(${r.value},${g.value},${b.value})`;
-        preview.style.background = rgb;
-        if (iframe && iframe.contentWindow && iframe.contentWindow.document && iframe.contentWindow.document.body) {
-          iframe.contentWindow.document.body.style.background = rgb;
-        }
-      }
+            function updateColor() {
+                const rgb = `rgb(${r.value},${g.value},${b.value})`;
+                preview.style.background = rgb;
+                if (iframe && iframe.contentWindow && iframe.contentWindow.document && iframe.contentWindow.document.body) {
+                    iframe.contentWindow.document.body.style.background = rgb;
+                }
+            }
 
-      // Load persisted style
-      const saved = localStorage.getItem('iframe-bg');
-      if (saved) {
-        try {
-          const { r: rv, g: gv, b: bv } = JSON.parse(saved);
-          r.value = rv; g.value = gv; b.value = bv;
-        } catch { }
-      }
-      // Ensure color is applied to iframe on load
-    //  iframe.addEventListener('load', updateColor);
-      //updateColor();
+            // Load persisted style
 
-      [r, g, b].forEach(slider => slider.addEventListener('input', updateColor));
 
-      // Persist style
-   //   persistBtn.addEventListener('click', function () {
-   //     localStorage.setItem('iframe-bg', JSON.stringify({ r: r.value, g: g.value, b: b.value }));
-  //      alert('Style persisted!');
-   //   });
+            [r, g, b].forEach(slider => slider.addEventListener('input', updateColor));
+
+            // Persist style
+            persistBtn.addEventListener('click', function () {
+                localStorage.setItem('iframe-bg', JSON.stringify({ r: r.value, g: g.value, b: b.value }));
+                alert('Style persisted!');
+            });
 
 
 
 
 
-    })();
-  </script>
+        })();
+    </script>
 
 
 
