--- a/colors.html
+++ b/colors.html
@@ -30,18 +30,37 @@
 
     <div id="styler-panel" class="w3-card w3-round w3-margin"
         style="height:100%;color:var(--text-color);overflow-y:hidden;">
+        <div id="testDiv" style="width:20px;height: 20px;background-color: aqua;"></div>
         <div style="text-align:center;padding:10px;">
             <label>R: <input type="range" min="0" max="255" value="255" id="r-slider"></label><br>
             <label>G: <input type="range" min="0" max="255" value="255" id="g-slider"></label><br>
             <label>B: <input type="range" min="0" max="255" value="255" id="b-slider"></label><br>
-            <div id="color-preview"
-                style="margin-top:10px;width:100%;height:30px;border-radius:4px;background:blue;">
+            <div id="color-preview" style="margin-top:10px;width:100%;height:30px;border-radius:4px;background:blue;">
             </div>
-
             <button id="persist-style" style="margin-top:10px;margin-bottom:0px;width:90%;">Persist</button>
-
         </div>
     </div>
+    <script>
+        var targetElement;
+        (function () {
+            // Standalone test mode if not in an iframe or no parent communication
+            if (window === window.parent) {
+                targetElement = document.getElementById('testDiv');
+                window.resizeTo(300, 300);
+                // Not in an iframe: create a test element
+                // Use testElement as your target for styling, etc.
+            } else {
+                // In iframe: wait for parent to send the real element reference
+                window.addEventListener('message', function (e) {
+                    if (e.data.type === 'select-element') {
+                        targetElement = e.data.element; // e.data.element may be a selector or reference
+                        // e.data.element may be a selector or reference
+                        // Use it as your target
+                    }
+                });
+            }
+        })();
+    </script>
 
     <script>
         (function () {
@@ -49,31 +68,44 @@
             const g = document.getElementById('g-slider');
             const b = document.getElementById('b-slider');
             const preview = document.getElementById('color-preview');
-            //   const iframe = document.querySelector('iframe[title="Profile"]');
-            const iframe = parent.document.querySelector('iframe[title="Profile"]');
+
+//            const iframe = parent.document.querySelector('iframe[title="Profile"]');
             const persistBtn = document.getElementById('persist-style');
 
             function updateColor() {
                 const rgb = `rgb(${r.value},${g.value},${b.value})`;
                 preview.style.background = rgb;
-                if (iframe && iframe.contentWindow && iframe.contentWindow.document && iframe.contentWindow.document.body) {
-                    iframe.contentWindow.document.body.style.background = rgb;
+                if (targetElement) {
+                    targetElement.style.backgroundColor = rgb; // Apply to the target element
+                } else {
+                    console.warn('Target element not set. Color will not be applied.');
                 }
             }
 
             // Load persisted style
 
-
             [r, g, b].forEach(slider => slider.addEventListener('input', updateColor));
-
 
             // Persist style
             persistBtn.addEventListener('click', function () {
-                localStorage.setItem('iframe-bg', JSON.stringify({ r: r.value, g: g.value, b: b.value }));
+             //   localStorage.setItem('iframe-bg', JSON.stringify({ r: r.value, g: g.value, b: b.value }));
                 alert('Style persisted!');
             });
         })();
     </script>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </body>
 
