--- a/profile.html
+++ b/profile.html
@@ -11,6 +11,7 @@
     <script>
         function clearAllOutlines() {
             document.querySelectorAll('*').forEach(el => {
+               // console.log('Clearing outline for:', el);
                 el.style.outline = '';
             });
         }
